# Isis-for-Windows

./: .gitattributes  LICENSE  README.md
installer/: Installer.Common.wxi  Installer.Machine.wxi  Installer.User.wxi  IsisDicomViewer.template.wxs  license.rtf
res/: overlays.json
src/: Isis-DICOM-Viewer.sln
src/SetupProject1/: Product.wxs  SetupProject1.wixproj
src/core/: ClassDiagram.cd  core.vcxproj  core.vcxproj.filters  corecontroller.cpp  corecontroller.h  corerepository.cpp  corerepository.h  dicomreader.cpp  dicomreader.h  dicomseriesloader.cpp  dicomseriesloader.h  dicomvolume.cpp  dicomvolume.h  dicomvolumecache.cpp  dicomvolumecache.h  dicomvolumemetadata.cpp  dicomvolumemetadata.h  image.cpp  image.h  patient.cpp  patient.h  series.cpp  series.h  smartdjdecoderregistration.cpp  smartdjdecoderregistration.h  study.cpp  study.h  utils.cpp  utils.h
src/examples/: integration_example.cpp
src/gui/: corneroverlay.cpp  corneroverlay.h  dcmtkoverlaywidget.cpp  dcmtkoverlaywidget.h  dicomcoresyncadapter.cpp  dicomcoresyncadapter.h  dicomviewcontroller.cpp  dicomviewcontroller.h  dicomvtkpipelinebuilder.cpp  dicomvtkpipelinebuilder.h  dimsenetworkmanager.cpp  dimsenetworkmanager.h  filemenu.cpp  filemenu.h  filemenu.ui  filesimporter.cpp  filesimporter.h  framelesswindow.cpp  framelesswindow.h  gui.cpp  gui.h  gui.qrc  (+118 more)
tests/: dicomseriesloader_slope_tolerance_test.cpp  dicomseriesloader_window_mismatch_test.cpp  tabwidget_mpr_guard_test.cpp  vtkwidget_volume_depth_test.cpp
tests/widget2d_rescale_sync_test/: CMakeLists.txt  widget2d_rescale_sync_test.cpp
(+75 files in other folders)
